--- a/static/web/assets/css/style.css
+++ b/static/web/assets/css/style.css
@@ -5223,6 +5223,8 @@ textarea {
   font-weight: 500;
   margin: 0;
   text-align: justify;
+  padding-top: 14px;
+  font-size: 15px;
 }
 
 .product-color {
@@ -5437,7 +5439,7 @@ textarea {
   padding: 15px 25px;
   z-index: 1;
   margin-left: -10px;
-  margin-top: 33px;
+  margin-top: 25px;
   font-size: 10px;
   width: 132px;
   padding-left: 33px;
@@ -5968,16 +5970,16 @@ textarea {
 }
 
 .blog-wrap .blog-content h3 {
-  font-size: 24px;
+  font-size: 4px;
   color: #4a4a4a;
-  font-weight: 500;
-  margin: 8px 0 17px;
-  line-height: 33px;
+  /* font-weight: 500; */
+  margin: 8px 0 30px;
+  line-height: 13px;
 }
 
 @media only screen and (min-width: 1366px) and (max-width: 1600px) {
   .blog-wrap .blog-content h3 {
-    font-size: 23px;
+    font-size: 15px;
   }
 }
 
@@ -6013,6 +6015,7 @@ textarea {
 
 .blog-wrap .blog-content h3 a {
   color: #4a4a4a;
+  font-size: 15px
 }
 
 .blog-wrap .blog-content h3 a:hover {
@@ -6405,7 +6408,7 @@ textarea {
 .product-area{
  
   padding-top: 50px;
-  padding-right: 50px;
+  padding-right: 0px;
 
 }
 
@@ -6427,7 +6430,8 @@ textarea {
 
 
 .product-details-area{
-  padding-top: 70px; 
+  padding-top: 70px;
+  padding-bottom: 70px; 
 }
 
 
@@ -7784,7 +7788,7 @@ textarea {
   line-height: 1;
   margin: 0;
   padding-right: 13px;
-  line-height: 30px;
+  line-height: 24px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -11383,7 +11387,7 @@ textarea {
 
 .customer-zone > p:before {
   content: "\e64d";
-  color: #6dde6d;
+  color: #ed1a3a;
   display: inline-block;
   position: absolute;
   font-family: 'themify';
@@ -11948,6 +11952,7 @@ textarea {
 	
 	height: auto;
 	 margin: 0 -10px;
+
 }
 
 .h1-1 {
@@ -11967,7 +11972,7 @@ textarea {
 		padding: 25px 35px;
 		text-align: left;
 		cursor: pointer;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25); */
     list-style-image: none;
     margin-bottom: 5px;
 }   
@@ -12001,7 +12006,7 @@ textarea {
   
   .accordion-content {
 		background-color: #ffffff;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
     padding-left: 45px;
     padding-top: 15px;
     
