--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -232,7 +232,7 @@
 
         </div>
         
-        <div class="subscribe-area pb-100">
+        <!-- <div class="subscribe-area pb-100">
             <div class="container">
                 <div class="section-title-3 text-center mb-55" data-aos="fade-up" data-aos-delay="200">
                     <h2>Join With Us!</h2>
@@ -262,6 +262,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         {% endblock %}
         
