--- a/templates/web/dealership.html
+++ b/templates/web/dealership.html
@@ -55,12 +55,11 @@
                             </div>
                             <div class="col-lg-6">
                                 {{ form.annual_turnover }}
-                                <label for="">Interested In</label>
                                 {{ form.interest }}
                                 {{ form.why_loqz }}
                             </div>
                             <div class="col-lg-12 col-md-12 col-12 contact-us-btn btn-hover">
-                                <button class="submit" type="submit">Send Message</button>
+                                <button class="submit" type="submit">SEND MESSAGE</button>
                             </div>
                         </div>
                         </div>
