--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -21,7 +21,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-3 col-md-6 col-6">
                     <div class="logo">
-                        <a href="{% url "web:index" %}"><img src="{% static 'web/assets/images/Products/logo.png' %}" alt="logo"></a>
+                        <a href="{% url "web:index" %}"><img src="{% static 'web/assets/images/Products/logo.svg' %}" alt="logo"></a>
                     </div>
                 </div>
                 <div class="col-lg-6 d-none d-lg-block d-flex justify-content-center">
