--- a/templates/web/updates-details.html
+++ b/templates/web/updates-details.html
@@ -30,7 +30,7 @@
                     <div class="blog-details-wrapper">
                         <div class="blog-details-img-date-wrap mb-35" data-aos="fade-up" data-aos-delay="200">
                              <div class="blog-details-img">
-                                <img src="{{updates.image.url}}" alt="">
+                                <img src="{{updates.detail_image.url}}" alt="">
                             </div>
 
                         </div>
