--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -90,7 +90,7 @@
                                {{form.message}}
                             </div>
                             <div class="col-lg-12 col-md-12 col-12 contact-us-btn btn-hover">
-                                <button class="submit" type="submit">Send Message</button>
+                                <button class="submit" type="submit">SEND MESSAGE</button>
                             </div>
                         </div>
                     </form>
