--- a/templates/web/product.html
+++ b/templates/web/product.html
@@ -31,7 +31,7 @@
 
                     <div class="col-lg-5">
                         <div class="product-details-content pt-small-none" data-aos="fade-up" data-aos-delay="200">
-                            <h2><span class="loqz-class"> {{product.title}}</span> <br> {{product.sub_title}}</h2>
+                            <h2><span class="loqz-class"> {{product.title}}</span> <br> <span class="second-tittle">{{product.sub_title}}</span></h2>
                             <div class="product-details-price">
 
                             </div>
