--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -9,7 +9,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-about mb-40">
                             <div class="footer-logo">
-                                <a href="{% url "web:index" %}"><img src="{% static 'web/assets/images/Products/logo.png' %}" alt="logo"></a>
+                                <a href="{% url "web:index" %}"><img src="{% static 'web/assets/images/Products/logo.svg' %}" alt="logo"></a>
                             </div>
                             <p> Making life more comfortable through effective innovations and executional</p>
 
