--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -7,20 +7,20 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>LOQZ</title>
     <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="Urdan Minimal eCommerce Bootstrap 5 Template is a stunning eCommerce website template that is the best choice for any online store.">
+    <meta name="description" content="LOQZ | Discover Comfort and Innovation with LOQZ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
-    <link rel="canonical" href="https://htmldemo.hasthemes.com/urdan/index.html" />
+   
 
     <!-- Open Graph (OG) meta tags are snippets of code that control how URLs are displayed when shared on social media  -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Urdan - Minimal eCommerce HTML Template" />
-    <meta property="og:url" content="https://htmldemo.hasthemes.com/urdan/index.html" />
-    <meta property="og:site_name" content="Urdan - Minimal eCommerce HTML Template" />
+    <meta property="og:title" content="LOQZ | Discover Comfort and Innovation with LOQZ" />
+   
+    <meta property="og:site_name" content="LOQZ | Discover Comfort and Innovation with LOQZ" />
     <!-- For the og:image content, replace the # with a link of an image -->
     <meta property="og:image" content="#" />
-    <meta property="og:description" content="Urdan Minimal eCommerce Bootstrap 5 Template is a stunning eCommerce website template that is the best choice for any online store." />
+    <meta property="og:description" content="LOQZ | Discover Comfort and Innovation with LOQZ" />
     <!-- Add site Favicon -->
     <link rel="icon" href="{% static 'web/assets/images/favicon/loqz.png'%}" sizes="32x32" />
     <link rel="icon" href="{% static 'web/assets/images/favicon/loqz.png'%}" sizes="192x192" />
