--- a/static/web/assets/css/style.css
+++ b/static/web/assets/css/style.css
@@ -327,6 +327,7 @@ textarea {
 @media only screen and (max-width: 767px) {
   .pb-70 {
     padding-bottom: 40px;
+    padding-top: -270px;
   }
 }
 
@@ -5445,6 +5446,7 @@ textarea {
   padding-left: 33px;
   height: 44px;
   font-weight: bold
+  
 }
 
 @media only screen and (max-width: 767px) {
@@ -7577,6 +7579,7 @@ textarea {
   border-top: 2px solid transparent;
   padding: 0 24px 33px 33px;
   position: relative;
+  margin-top: 31px
 }
 
 .single-testimonial:before {
@@ -7745,6 +7748,7 @@ textarea {
   border-left: 2px solid #dedbdb;
   border-right: 2px solid #dedbdb;
   border-top: 2px solid #dedbdb;
+  margin-top: 31px
 }
 
 .testimonial-active .swiper-slide.swiper-slide-active .single-testimonial .testimonial-img {
