--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -106,13 +106,13 @@
     </div>
 </div>
 
-<!-- <div id="beforeAfterImgContainer">
+ {% comment %} <div id="beforeAfterImgContainer">
    
     <img src="{%  static  'web/assets/images/Products/after-image.png'%}" />
    
     <img src="{%  static  'web/assets/images/Products/before-image.png'%}" />
-</div> -->
-<div class="container">
+</div> {% endcomment %}
+ <div class="container">
 <div class="before-after">
     <img src="{%  static  'web/assets/images/Products/before-image.png'%}" alt="Before Image" class="before">
     <img src="{%  static  'web/assets/images/Products/after-image.png'%}" alt="After Image" class="after">
@@ -208,7 +208,7 @@
 </div>
 
 
-<div class="testimonial-area">
+<div class="testimonial-area testmoial-div">
     <div class="container">
         <div class="section-title-2 st-border-center text-center mb-" data-aos="fade-up" data-aos-delay="200">
             <h2>Testimonial</h2>
@@ -272,7 +272,7 @@
         </div>
     </div>
 </div>
-<div class="blog-area pb-70">
+<div class="blog-area update-area pb-100">
     <div class="container">
         <div class="section-title-2 st-border-center text-center mb-75" data-aos="fade-up" data-aos-delay="200">
             <h2>LATEST NEWS</h2>
