--- a/static/web/assets/css/custom.css
+++ b/static/web/assets/css/custom.css
@@ -149,8 +149,12 @@
 }
 
 .blog-details-wrapper .blog-details-img-date-wrap .blog-details-img img{
-  width: 345px;
+  width: 333px;
     height: 150px;
+}
+
+.footer-about .footer-logo a img{
+  width: 25px;
 }
 }
 
@@ -161,7 +165,7 @@
   position: relative;
   overflow: hidden;
   width: 100%; /* Adjust width as needed */
-  height: 85vh; /* Adjust height as needed */
+  height: 70vh; /* Adjust height as needed */
 }
 
 .before,
@@ -172,6 +176,7 @@
   width: 100%;
   height: 100%;
   transition: transform 0.5s ease-in-out; /* Add transition */
+  padding-top: 70px;
 }
 
 .after {
@@ -212,6 +217,52 @@
   .pt-100{
     padding-top: 45px;
   }
+
+  .footer-about .footer-logo a img{
+    width: 25px;
+ 
+  }
+
+  .contact-form-style .contact-us-btn button{
+    margin-right: 110px;
+  }
+  .contact-us-btn{
+    display: flex;
+    justify-content: center;
+  }
   
 }
- 
+
+
+.twentytwenty-overlay,
+.twentytwenty-before-label,
+.twentytwenty-after-label {
+    pointer-events: none;
+   position: relative;
+   width: 100%;
+  }
+
+
+  .testmoial-div{
+    padding-top: 70px;
+  }
+
+  .update-area{
+    padding-top: 70px;
+    padding-bottom: 75px;
+  }
+
+
+  .contact-border{
+    /* border: 1px solid black;
+     border-radius: 10px; */
+     box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+      -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+       -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.15);
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    height: 200px;
+    text-align: center
+  }
