--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -89,7 +89,7 @@
 
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <script src="https://scripts.sirv.com/sirvjs/v3/sirv.js"></script>
-<script src="script.js"></script>
+
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -106,6 +106,17 @@ window.onload = function() {
     }, 100); // Remove hover class after a short delay
   }
   
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mhayes-twentytwenty/1.0.0/js/jquery.event.move.min.js" integrity="sha512-LbipuILGe2LAzpjWmMA+B++LsvW1nAL5IQXvpmidOmJmei0p/odo6ewzxX8YHGc51DGIwcUDa6LxQxOEf7G1EA==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mhayes-twentytwenty/1.0.0/js/jquery.twentytwenty.min.js" integrity="sha512-GPLeok4pmABjbz8dF6i4cqao9fhF9LE5X4rI0ORBe2YqbZmaqdSiM7g4oO+CEy99SxZV6memnoKANwopFr6Z6g==" crossorigin="anonymous"></script>
+<script>
+  $(window).on('load',function(){
+    $("#beforeAfterImgContainer").twentytwenty({
+        no_overlay: true
+    });
+  });
+</script>
 </script>
 </body>
 
