--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -26,23 +26,23 @@
         </div>
         <div class="contact-us-area pt-100 pb-65">
             <div class="container">
-                <div class="section-title-4 text-center mb-50" data-aos="fade-up" data-aos-delay="200">
+                <!-- <div class="section-title-4 text-center mb-50" data-aos="fade-up" data-aos-delay="200">
                     <h2>GET IN TOUCH WITH LOQZ</h2>
-                </div>
+                </div> -->
                 <div class="row contact-admin">
                     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                        <div class="contact-us-info-wrap mb-30" data-aos="fade-up" data-aos-delay="200">
+                        <div class="contact-us-info-wrap  mb-30  contact-border" data-aos="fade-up" data-aos-delay="200" >
                             <div class="contact-us-info-title">
                                 <h3>Shop</h3>
                             </div>
                             <div class="contact-us-info">
-                                <p>Alinchuvadu-Neerad Rd, Mele Kizhisseri, </p>
-                                <span>Neerad, Kerala 673638 info@loqz.in</span>
+                                <p>Alinchuvadu-Neerad Rd,<br> Mele Kizhisseri, </p>
+                                <span>Neerad, Kerala <br> 673638 info@loqz.in</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                        <div class="contact-us-info-wrap mb-30" data-aos="fade-up" data-aos-delay="400">
+                        <div class="contact-us-info-wrap mb-30  contact-border" data-aos="fade-up" data-aos-delay="400">
                             <div class="contact-us-info-title">
                                 <h3> Email 
                                     </h3>
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-12">
-                        <div class="contact-us-info-wrap mb-30" data-aos="fade-up" data-aos-delay="600">
+                        <div class="contact-us-info-wrap mb-30  contact-border" data-aos="fade-up" data-aos-delay="600">
                             <div class="contact-us-info-title">
                                 <h3>Phone</h3>
                             </div>
@@ -89,7 +89,8 @@
                             <div class="col-lg-8">
                                {{form.message}}
                             </div>
-                            <div class="col-lg-12 col-md-12 col-12 contact-us-btn btn-hover">
+                            <div class="col-lg-12 col-md-12 col-12 contact-us-btn btn-hover" style="    display: flex;
+                            justify-content: center;">
                                 <button class="submit" type="submit">SEND MESSAGE</button>
                             </div>
                         </div>
