--- a/templates/web/dealership.html
+++ b/templates/web/dealership.html
@@ -38,28 +38,38 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 {{ form.firm_name }}
-                                {{ form.full_name }}
                                 {{ form.email }}
-                                {{ form.mobile }}
+                                {{ form.address }}
+                                {{ form.city }}
+                                
                             </div>
                             <div class="col-lg-6">
-                                {{ form.address }}
-                                {{ form.pincode }}
+                                {{ form.full_name }}
+                                {{ form.mobile }}
                                 {{ form.state }}
-                                {{ form.city }}
+                                {{ form.pincode }}
                             </div>
                             <div class="col-lg-6">
                                 {{ form.business }}
                                 {{ form.year_of_experience }}
                                 {{ form.brand_handled }}
+                               
                             </div>
                             <div class="col-lg-6">
                                 {{ form.annual_turnover }}
                                 {{ form.interest }}
-                                {{ form.why_loqz }}
+                                {{ form.whatsapp_number }}
+                               
+
+                                   
                             </div>
-                            <div class="col-lg-12 col-md-12 col-12 contact-us-btn btn-hover">
-                                <button class="submit" type="submit">SEND MESSAGE</button>
+                            <div class="col-lg-12">
+                                {{ form.why_loqz }} 
+                            
+                           
+                            <div class="col-lg-12 col-md-12 col-12 contact-us-btn btn-hover" style="    display: flex;
+                            justify-content: center;">
+                                <button class="submit" type="submit">SUBMIT</button>
                             </div>
                         </div>
                         </div>
