--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon" href="{% static 'web/assets/images/favicon/loqz.png'%}" />
     <meta name="msapplication-TileImage" content="{% static 'web/assets/images/favicon/loqz.png'%}" />
 
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mhayes-twentytwenty/1.0.0/css/twentytwenty.min.css" integrity="sha512-NJy06C7fPArp8I0XLO5pDDTDguBMLCPQ2FyjU3xrwuD5CGyN6CbfTr40Zv+YON7lDNzAsRqZeEY8Oi0xrgP+3w==" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mhayes-twentytwenty/1.0.0/css/twentytwenty.min.css" integrity="sha512-NJy06C7fPArp8I0XLO5pDDTDguBMLCPQ2FyjU3xrwuD5CGyN6CbfTr40Zv+YON7lDNzAsRqZeEY8Oi0xrgP+3w==" crossorigin="anonymous" />
 
@@ -106,6 +106,16 @@ window.onload = function() {
     }, 100); // Remove hover class after a short delay
   }
   
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mhayes-twentytwenty/1.0.0/js/jquery.event.move.min.js" integrity="sha512-LbipuILGe2LAzpjWmMA+B++LsvW1nAL5IQXvpmidOmJmei0p/odo6ewzxX8YHGc51DGIwcUDa6LxQxOEf7G1EA==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mhayes-twentytwenty/1.0.0/js/jquery.twentytwenty.min.js" integrity="sha512-GPLeok4pmABjbz8dF6i4cqao9fhF9LE5X4rI0ORBe2YqbZmaqdSiM7g4oO+CEy99SxZV6memnoKANwopFr6Z6g==" crossorigin="anonymous"></script>
+<script>
+  $(window).on('load',function(){
+    $("#beforeAfterImgContainer").twentytwenty({
+        no_overlay: true
+    });
+  });
 </script>
 </body>
 
