--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -112,21 +112,30 @@
    
     <img src="{%  static  'web/assets/images/Products/before-image.png'%}" />
 </div> {% endcomment %}
- <div class="container">
+ {% comment %} <div class="container">
 <div class="before-after">
     <img src="{%  static  'web/assets/images/Products/before-image.png'%}" alt="Before Image" class="before">
     <img src="{%  static  'web/assets/images/Products/after-image.png'%}" alt="After Image" class="after">
     <span class="overlay"></span>
   </div>
 
+</div> {% endcomment %}
+<div class="container">
+    <div id="beforeAfterImgContainer">
+   
+        <img src="{%  static  'web/assets/images/Products/after-image.jpg'%}" />
+       
+        <img src="{%  static  'web/assets/images/Products/before-image-new.jpg'%}" />
+    </div>
 </div>
+
   
 
 <div class="service-area pb-70">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 mb-30">
-                <div class="service-wrap" data-aos="fade-up" data-aos-delay="200">
+                <div class="service-wrap" data-aos="" data-aos-delay="200">
                     <div class="service-img">
                         <img src="{%  static  'web/assets/images/icon-img/car.png'%}" alt="">
                     </div>
@@ -137,7 +146,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 mb-30">
-                <div class="service-wrap" data-aos="fade-up" data-aos-delay="400">
+                <div class="service-wrap" data-aos="" data-aos-delay="400">
                     <div class="service-img">
                         <img src="{%  static  'web/assets/images/icon-img/time.png'%}" alt="">
                     </div>
@@ -148,7 +157,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 mb-30">
-                <div class="service-wrap" data-aos="fade-up" data-aos-delay="600">
+                <div class="service-wrap" data-aos="" data-aos-delay="600">
                     <div class="service-img">
                         <img src="{%  static  'web/assets/images/icon-img/dollar.png'%}" alt="">
                     </div>
@@ -159,7 +168,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 mb-30">
-                <div class="service-wrap" data-aos="fade-up" data-aos-delay="800">
+                <div class="service-wrap" data-aos="" data-aos-delay="800">
                     <div class="service-img">
                         <img src="{%  static  'web/assets/images/icon-img/discount.png'%}" alt="">
                     </div>
@@ -174,7 +183,7 @@
 </div>
 <div class="product-area pb-95">
     <div class="container">
-        <div class="section-border section-border-margin-1" data-aos="fade-up" data-aos-delay="200">
+        <div class="section-border section-border-margin-1" data-aos="" data-aos-delay="200">
             <div class="section-title-timer-wrap bg-white">
                 <div class="section-title-1">
                     <h2>Smart Fablock</h2>
@@ -187,7 +196,7 @@
                 {% for product in smart_fablock_plus %}
                 {% for product_image in product.get_image %}
                 <div class="swiper-slide">
-                    <div class="product-wrap" data-aos="fade-up" data-aos-delay="200">
+                    <div class="product-wrap" data-aos="" data-aos-delay="200">
                         <div class="product-img img-zoom mb-25">
                             <a href="{{ product.get_absolute_url}}">
                                 <img src="{{ product_image.image.url }}" alt="">
@@ -199,9 +208,9 @@
                 {% endfor %}
 
             </div>
-            <div class="product-prev-1 product-nav-1" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-angle-left"></i>
+            <div class="product-prev-1 product-nav-1" data-aos="" data-aos-delay="200"><i class="fa fa-angle-left"></i>
             </div>
-            <div class="product-next-1 product-nav-1" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-angle-right"></i>
+            <div class="product-next-1 product-nav-1" data-aos="" data-aos-delay="200"><i class="fa fa-angle-right"></i>
             </div>
         </div>
     </div>
@@ -210,7 +219,7 @@
 
 <div class="testimonial-area testmoial-div">
     <div class="container">
-        <div class="section-title-2 st-border-center text-center mb-" data-aos="fade-up" data-aos-delay="200">
+        <div class="section-title-2 st-border-center text-center mb-" data-aos="" data-aos-delay="200">
             <h2>Testimonial</h2>
         </div>
         <div class="testimonial-active swiper-container">
@@ -219,7 +228,7 @@
                 <div class="swiper-slide">
                     <div class="single-testimonial" data-aos="" data-aos-delay="200">
                         <div class="testimonial-img">
-                            <img src="{{ testimonial.image.url}}" alt="fade-up">
+                            <img src="{{ testimonial.image.url}}" alt="">
                         </div>
                         <p>{{testimonial.description}}</p>
                         <div class="testimonial-info">
@@ -230,7 +239,7 @@
                 </div>
                 {% endfor %}
                 {% comment %} <div class="swiper-slide">
-                    <div class="single-testimonial" data-aos="fade-up" data-aos-delay="400">
+                    <div class="single-testimonial" data-aos="" data-aos-delay="400">
                         <div class="testimonial-img">
                             <img src="{%  static  'web/assets/images/testimonial/client-2.png'%}" alt="">
                         </div>
@@ -243,7 +252,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="single-testimonial" data-aos="fade-up" data-aos-delay="600">
+                    <div class="single-testimonial" data-aos="" data-aos-delay="600">
                         <div class="testimonial-img">
                             <img src="{%  static  'web/assets/images/testimonial/client-1.png'%}" alt="">
                         </div>
@@ -274,13 +283,13 @@
 </div>
 <div class="blog-area update-area pb-100">
     <div class="container">
-        <div class="section-title-2 st-border-center text-center mb-75" data-aos="fade-up" data-aos-delay="200">
+        <div class="section-title-2 st-border-center text-center mb-75" data-aos="" data-aos-delay="200">
             <h2>LATEST NEWS</h2>
         </div>
         <div class="row">
             {% for update in updates %}
             <div class="col-lg-3 col-md-6">
-                <div class="blog-wrap mb-30" data-aos="fade-up" data-aos-delay="200">
+                <div class="blog-wrap mb-30" data-aos="" data-aos-delay="200">
                     <div class="blog-img-date-wrap mb-25">
                         <div class="blog-img">
                             <a href="{{update.get_absolute_url}}">
